test/good/functions/args06.px

func f(x': Int = 0): Bool def
    return x' >= 0

print f(), f(3)
print f(x'=-1)
