test/bad/functions/type03.px

func apply(f: Bool->Bool, b: Bool): Bool def
    return f(b)

func f(): Bool def
    return true

apply(f, true)
